# pathos

./: AGENTS.md  Cargo.toml
.agents/skills/pathos-parser/references/: winnow-pitfalls.md
crates/pathos-cli/: Cargo.toml
crates/pathos-cli/src/: main.rs
crates/pathos-core/: Cargo.toml
crates/pathos-core/src/: config.rs  content.rs  error.rs  expression.rs  hook.rs  lib.rs  macros.rs  passage.rs  runtime.rs  script.rs  state.rs  types.rs  value.rs
crates/pathos-core/src/scripts/: mod.rs  rhai_backend.rs
crates/pathos-core/tests/: integration_test.rs
crates/pathos-gui/: Cargo.toml
crates/pathos-llm/: Cargo.toml
crates/pathos-lsp/: Cargo.toml
crates/pathos-mod/: Cargo.toml
crates/pathos-parser/: Cargo.toml
crates/pathos-parser/src/: expression.rs  format.rs  inline.rs  lib.rs  pathos_parser.rs  toml_parser.rs
crates/pathos-parser/tests/: snapshots.rs
crates/pathos-parser/tests/snapshots/: snapshots__snapshot_ai_block.snap  snapshots__snapshot_comments.snap  snapshots__snapshot_conditional_link.snap  snapshots__snapshot_display_embed.snap  snapshots__snapshot_expression_forms.snap  snapshots__snapshot_hook_directive.snap  snapshots__snapshot_if_else_end.snap  snapshots__snapshot_minimal_pathos.snap  snapshots__snapshot_passage_with_tags_and_scripts.snap  snapshots__snapshot_start_passage_not_found.snap  snapshots__snapshot_unknown_function_in_if.snap  snapshots__snapshot_unused_passage_warning.snap
crates/pathos-render/: Cargo.toml
crates/pathos-render/src/: lib.rs
crates/pathos-tui/: Cargo.toml
crates/pathos-tui/src/: lib.rs
crates/pathos-web/: Cargo.toml
docs/: TODO.md  architecture.md  incident-report-2026-06-26.md
skills/pathos-parser/: SKILL.md
