[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.lints.rust]
unreachable_pub = "warn"
unsafe_code = "forbid"
unused_must_use = "warn"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }

[profile.dev]
opt-level = 0

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
