[package]
name = "pathos-core"
version = "0.1.0"
edition = "2024"

[dependencies]
ordered-float = { version = "5.3.0", features = ["serde"] }
rhai = "1.25.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
tracing = "0.1.44"

[lints]
workspace = true

[features]
# Rhai is always compiled. JS and Lua are opt-in via feature gates.
script-js = []
script-lua = []

[dev-dependencies]
pathos-parser = { path = "../pathos-parser" }
pathos-render = { path = "../pathos-render" }
